--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="./images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=Life+Savers&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="hoppyStyle.css">
-    <title>Document</title>
+    <title>Hoppy Bunny</title>
 </head>
 <body>
     <div id="title-div">
